<resources>
    <string name="app_name">Capacitaciones</string>
    <string name="vacio"></string>

    <string name="login_correo">Correo</string>
    <string name="login_contrasena">Contraseña</string>
    <string name="login_mensaje">Correo y/o Contraseña Incorrectos</string>
    <string name="login_btn_Ingresar">Ingresar</string>
    <string name="login_btn_Registrar">Registrar</string>

    <string name="registro_nombre">Nombre(s)</string>
    <string name="registro_apellido">Apellido(s)</string>
    <string name="registro_correo1">Correo</string>
    <string name="registro_correo">name@domain</string>
    <string name="registro_titulo">Registro</string>

    <string name="menu_nombreU">Nombre Usuario</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_grupo">Grupos</string>
    <string name="menu_curso">Cursos</string>
    <string name="menu_usuario">Usuarios</string>

    <string name="curso_titulo">Nuevo Curso</string>
    <string name="curso_nombre">Nombre</string>
    <string name="curso_duracion">Duración</string>
    <string name="curso_descripcion">Descripción</string>
    <string name="curso_fecha">Fecha de Creación</string>
    <string name="curso_btn_cancelar">Cancelar</string>
    <string name="curso_btn_guardar">Guardar Curso</string>
    <string name="curso_btn_crear">Crear Curso</string>

    <string name="grupo_titulo">Nuevo Grupo</string>
    <string name="grupo_clave">Clave</string>
    <string name="grupo_curso">Curso</string>
    <string name="grupo_docente">Docente</string>
    <string name="grupo_no_integrantes">Número de Integrantes</string>
    <string name="grupo_status">Status</string>
    <string name="grupo_fecha_inicio">Fecha de Inicio</string>
    <string name="grupo_fecha_fin">Fecha de Fin</string>
    <string name="grupo_btn_cancelar">Cancelar</string>
    <string name="grupo_btn_guardar">Guardar Grupo</string>
    <string name="grupo_btn_crear">Crear Grupo</string>

    <string name="clase_titulo">Nueva Clase</string>
    <string name="clase_fecha">Fecha</string>
    <string name="clase_hora">Hora</string>
    <string name="clase_descripcion">Descripción</string>
    <string name="clase_status">Status</string>
    <string name="clase_btn_cancelar">Cancelar</string>
    <string name="clase_btn_guardar">Guardar Clase</string>
    <string name="clase_btn_crear">Crear Clase</string>

    <string name="curso_list_titulo">Cursos Actuales</string>
    <string name="curso_list_nombre">Nombre</string>
    <string name="curso_list_duracion">Duración</string>
    <string name="curso_list_opciones">Opciones</string>
    <string name="curso_list_btnregresar">Regresar</string>
    <string name="curso_list_btnagregar">Agregar Curso</string>

    <string name="inicio_misgrupos">Mis Grupos</string>
    <string name="inicio_misclases">Proximas Clases</string>

    <string name="grupo_list_titulo">Grupos Actuales</string>
    <string name="grupo_list_clave">Clave</string>
    <string name="grupo_list_curso">Curso</string>
    <string name="grupo_list_docente">Docente</string>
    <string name="grupo_list_integrantes">Integrantes</string>
    <string name="grupo_list_opciones">Opciones</string>
    <string name="grupo_list_btnregresar">Regresar</string>
    <string name="grupo_list_btnagregar">Agregar Grupo</string>

    <string name="clase_list_titulo">Clases Actuales</string>
    <string name="clase_list_fecha">Fecha</string>
    <string name="clase_list_hora">Hora</string>
    <string name="clase_list_status">Status</string>
    <string name="clase_list_opciones">Opciones</string>
    <string name="clase_list_btnregresar">Regresar</string>
    <string name="clase_list_btnagregar">Agregar Clase</string>

    <string name="inicio_list_nombre">Nombre Curso</string>
    <string name="inicio_list_clave">Clave</string>
    <string name="inicio_list_status">Status</string>
    <string name="inicio_list_responsable">Docente</string>
    <string name="inicio_list_btnvermas">Ver Mas</string>

    <string name="inicio_list_clase_nombre">Nombre Curso</string>
    <string name="inicio_list_clase_fecha">Fecha</string>
    <string name="inicio_list_clase_hora">Hora</string>
    <string name="inicio_list_clase_status">Status</string>
    <string name="inicio_list_clase_btnvermas">Ver Mas</string>

    <string name="detalle_grupo_clave">Nombre Curso (Clave Grupo)</string>
    <string name="detalle_grupo_descripcion_curso">Descripción del Curso</string>
    <string name="detalle_grupo_clases">Clases</string>
    <string name="detalle_grupo_regresar">Regresar</string>
    <string name="detalle_grupo_inscribirme">Inscribirme</string>

    <string name="usuarios_list_titulo">Usuarios</string>
    <string name="usuarios_list_nombre">Nombre</string>
    <string name="usuarios_list_apellido">Apellido(s)</string>
    <string name="usuarios_list_correo">Correo</string>
    <string name="usuarios_list_opciones">Opciones</string>
    <string name="usuarios_list_regresar">Regresar</string>
    <string name="usuarios_list_registrar">Registrar</string>

    <string name="usuarios_title">Nuevo usuario</string>

    <string name="notificaciones_title">Notificaciones</string>
    <string name="notificaciones_fecha">Fecha/Hora</string>
    <string name="notificaciones_descripcion">Descripcion</string>
    <string name="notificaciones_Opciones">Opciones</string>
    <string name="notificaciones_regresar">Regresar</string>

    <string name="detalle_clase_title">Detalle clase (Id Clase)</string>
    <string name="detalle_clase_fecha_hora">Fecha y Hora:</string>
    <string name="detalle_clase_descripcion">Descripcion:</string>
    <string name="detalle_clase_estatus">Estatus:</string>
    <string name="detalle_clase_asistencia">Confirmar asistencia</string>

</resources>
