<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalleCurso">

    <TableRow
        android:id="@+id/tr_barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:contentDescription="@string/vacio"
            app:srcCompat="@drawable/rhino_logo" />

        <ImageView
            android:id="@+id/iv_perfil"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:contentDescription="@string/vacio"
            app:srcCompat="@drawable/icono_perfil" />

        <TextView
            android:id="@+id/tv_nombre_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:text="@string/menu_nombreU" />
    </TableRow>

    <TextView
        android:id="@+id/tv_detalle_curso_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/curso_list_nombre"
        android:textColor="#FA000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_detalle_curso_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/curso_descripcion"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_detalle_curso_duracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/curso_duracion"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_detalle_curso_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/curso_fecha"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_regresar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/holo_green_light"
        android:onClick="regresar"
        android:text="@string/curso_list_btnregresar" />
</LinearLayout>