<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListGrupo">

    <TableRow
        android:id="@+id/tr_barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:contentDescription="@string/vacio"
            app:srcCompat="@drawable/rhino_logo" />

        <ImageView
            android:id="@+id/iv_perfil"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:contentDescription="@string/vacio"
            app:srcCompat="@drawable/icono_perfil" />

        <TextView
            android:id="@+id/tv_nombre_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:text="@string/menu_nombreU" />
    </TableRow>

    <TableRow
        android:id="@+id/tr_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu_inicio"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="irInicio"/>

        <TextView
            android:id="@+id/tv_grupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu_grupo"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="irGrupos"/>

        <TextView
            android:id="@+id/tv_curso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu_curso"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="irCursos"/>

        <TextView
            android:id="@+id/tv_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu_usuario"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="irUsuarios"/>
    </TableRow>

    <TableRow
        android:id="@+id/tr_notificaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_notificacion"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/vacio"
            android:onClick="irNotificaciones"
            app:srcCompat="@drawable/icono_notificacion" />

        <ImageView
            android:id="@+id/iv_salir"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/vacio"
            android:onClick="salir"
            app:srcCompat="@drawable/icono_salir" />

    </TableRow>

    <TextView
        android:id="@+id/tv_titulo_list_grupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/grupo_list_titulo"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableRow
        android:id="@+id/tr_menus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_list_grupo_clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/grupo_list_clave"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_list_grupo_curso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/grupo_list_curso"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_list_grupo_docente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/grupo_list_docente"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_list_grupo_integrantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/grupo_list_integrantes"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_list_grupo_opciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/grupo_list_opciones"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>

    <ScrollView
        android:id="@+id/sv_list_grupos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_grupos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableRow
                android:id="@+id/tr_botones"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_regresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:onClick="irInicio"
                    android:text="@string/grupo_list_btnregresar" />

                <Button
                    android:id="@+id/btn_agregar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_dark"
                    android:onClick="irNuevoGrupo"
                    android:text="@string/grupo_list_btnagregar" />
            </TableRow>
        </LinearLayout>
    </ScrollView>
</LinearLayout>