<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableRow
        android:id="@+id/tr_barra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:contentDescription="@string/vacio"
            app:srcCompat="@drawable/rhino_logo" />

        <TextView
            android:id="@+id/tv_registro_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:text="@string/registro_titulo"
            android:textSize="36sp" />
    </TableRow>

    <LinearLayout
        android:id="@+id/tv_select_tol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_registro_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/registro_nombre"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_nombre_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/registro_nombre"
            android:inputType="number"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_apellido_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/registro_apellido"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/registro_nombre"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_correo_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/registro_correo1"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_fecha_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/registro_correo"
            android:inputType="date"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_registro_rol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/registro_rol"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/et_select_puesto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/grupo_curso"
            android:textColor="#000000"
            android:textSize="18sp"></Spinner>

        <TableRow
            android:id="@+id/tr_botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_regresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="@string/grupo_btn_cancelar" />

            <Button
                android:id="@+id/btn_curso_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/login_btn_Registrar" />
        </TableRow>
    </LinearLayout>
</LinearLayout>